# Yuuna

./: README.md  build.gradle  settings.gradle
Ori/src/main/java/com/origami/utils/: Ori.java
Ori/src/main/res/drawable/: _ori_progressbar.xml  _ori_status_color.xml  _status_bar_color.xml
app/: CMakeLists.txt  build.gradle  yuuna.jks
app/libs/: plat_release.aar
app/src/androidTest/java/com/safone/yuuna/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: mp3encode.cpp  ori_transcoding.cpp
app/src/main/cpp/include/: mp3encode.h  ori_transcoding.h
app/src/main/java/com/ori/opengl/: OpenGlAct.java
app/src/main/java/com/ori/origami/: DemoAct.java
app/src/main/java/com/ori/origami/jni/: Mp3encode.java  NativeOriTranscoding.java
app/src/main/java/com/ori/origami/recoder/: OriAudio.java
app/src/main/java/com/safone/yuuna/: MainActivity.java  Yuuna.java  indexAct.java
app/src/main/java/com/safone/yuuna/adapter/: MainAdapter.java
app/src/main/java/com/safone/yuuna/adapter/bean/: MainAdapterBean.java
app/src/main/java/com/safone/yuuna/p2p/: UdpP2P.java
app/src/main/java/com/safone/yuuna/qn/: QNTestAct.java  Utils.java
app/src/main/res/layout/: act_demo.xml  activity_index.xml  activity_main.xml  activity_qn_test.xml  adapter_item_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/safone/yuuna/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
